# txCV

Aircraft/: CMakeLists.txt  clientStart.sh  config.xml  main.cpp
Aircraft/include/: serialsom.h
ArUcoMarkerTracking/: CMakeLists.txt  main.cpp
ArUcoMarkerTracking/include/: ArUcoMarker.h  MyQueue.h
ArmorRecognizer0/: CMakeLists.txt  clientStart.sh  main - buckup2.cpp  main.cpp  readme.txt  video.cfg
ArmorRecognizer0/include/: MyQueue.h  functions.h  getConfig.h  serialsom.h
ArmorRecognizer1/: CMakeLists.txt  main.cpp  readme.txt
ArmorRecognizer1/include/: StereoVision.h  functions.h  serialsom.h
NineRectRecognizer/: CMakeLists.txt  classifications.xml  images.xml  main.cpp  readme.txt  video.cfg  video.txt
NineRectRecognizer/include/: functions.h
NineRectRecognizerTest/: CMakeLists.txt  classifications.xml  classifications1.xml  classifications2.xml  clientStart.sh  config.xml  images.xml  images1.xml  images2.xml  main-bkp.cpp  main.cpp  readme.md  record.xml
NineRectRecognizerTest/include/: functions.h  serialsom.h
